--- a/DesarrolloWebE_Commerce_FastFood/FastFood/Web.config
+++ b/DesarrolloWebE_Commerce_FastFood/FastFood/Web.config
@@ -8,8 +8,10 @@
 <!--CAMBIO DEL TAMANO DE LAS IMAGENES-->
 <configuration>
 	<appSettings>
+		<add key="cadenaConexion" value="server=.\SQLEXPRESS; database=FASTFOOD_DB; integrated security=true" />
 		<add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
 	</appSettings>
+
 	<system.web>
 		<httpRuntime maxRequestLength="20480" />
 		<compilation debug="true" targetFramework="4.7.2" />
@@ -22,6 +24,12 @@
 				<!-- Tamaño en bytes (20MB) -->
 			</requestFiltering>
 		</security>
+		<defaultDocument>
+			<files>
+				<!--importante para la redireccion a la pagina principal y el servidor lo detecte, porque esta dentro de una carpeta-->
+				<add value="User/Introduction.aspx" />
+			</files>
+		</defaultDocument>
 	</system.webServer>
 
 	<system.codedom>
